--- a/elektr.html
+++ b/elektr.html
@@ -23,7 +23,7 @@
         <nav>
           <ul>
             <li><a href="elm.html">Elmélet</a></li>
-            <li><a href="#">Elektronika</a></li>
+            <li><a href="#" id="aktiv">Elektronika</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
