--- a/elm.html
+++ b/elm.html
@@ -22,7 +22,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="#">Elmélet</a></li>
+            <li><a href="#" id="aktiv">Elmélet</a></li>
             <li><a href="elektr.html">Elektronika</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
@@ -40,7 +40,7 @@
         </nav>
       </aside>
       <section>
-        <h2>Elmélet 10 leckében</h2>
+        <h1>Elmélet 10 leckében</h1>
         <ol>
           <li><a href="hardver/infelm.html">Információelmélet & kódelmélet</a></li>
           <li><a href="hardver/binary.html">Számrendszerek</a></li>
@@ -52,6 +52,7 @@
           <li><a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></li>
         </ol>
     
+        <h1>Anyagok</h1>
         <p><a href="okt/okt.html">Oktatási anyagok</a></p>
         <p><a href="okt/szamtechtortenet.html">A számítástechnika története</a></p>
         <p><a href="hardver/r.html">Numerikus programozás</a></p>
