--- a/halozatok.html
+++ b/halozatok.html
@@ -31,7 +31,7 @@
             <li><a href="okostelefon.html">Okoseszközök</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
-            <li><a href="#">Hálózati ismeretek</a></li>
+            <li><a href="#" id="aktiv">Hálózati ismeretek</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
@@ -89,6 +89,8 @@
             <li><a href="ptt/halo29.html">Hálózatvirtualizáció, hálózatautomatizáció (5+19 óra)</a></li>
             <li><a href="ptt/halo210.html">Komplex hálózat tervezése, kialakítása (8+20 óra)</a></li>
           </ol>
+
+        <h1>Anyagok</h1>
 
           <h3>OSI 1-2 - Fizikai és adatkapcsolati réteg</h3>
           <p><a href="osi12/fizikai.html">Fizikai réteg</a></p>
