--- a/okostelefon.html
+++ b/okostelefon.html
@@ -28,7 +28,7 @@
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="office.html">Irodai szoftverek</a></li>
-            <li><a href="#">Okoseszközök</a></li>
+            <li><a href="#" id="aktiv">Okoseszközök</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
