--- a/pcbegin.html
+++ b/pcbegin.html
@@ -25,7 +25,7 @@
             <li><a href="elm.html">Elmélet</a></li>
             <li><a href="elektr.html">Elektronika</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
-            <li><a href="#.html">Személyi számítógép</a></li>
+            <li><a href="#.html" id="aktiv">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="office.html">Irodai szoftverek</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
@@ -41,7 +41,8 @@
       </aside>
       <section>
         
-            <h1>Gépház</h1>
+        <h1>Gépház</h1>
+            <h3>Programtanterv</h3>
             <p><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></p>
             <p><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></p>
             <p><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></p>
@@ -57,9 +58,9 @@
             <p><a href="hardver/biosuefi.html">BIOS, UEFI</a></p>
 
             <h1>Perifériák</h1>
+
+            <h3>Programtanterv</h3>
             <p><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
-            <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák <i class="fa fa-external-link"></i></a></p>
-            <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők <i class="fa fa-external-link"></i></a></p>
 
             <h3>Anyagok</h3>
             <p><a href="perif/bill.html">Billentyűzet</a></p>
@@ -70,6 +71,9 @@
             <p><a href="perif/fenyk.html">Fényképező & kamera</a></p>
             <p><a href="perif/scanner.html">Scanner</a></p>
             <p><a href="perif/digitabla.html">Digitális tábla</a></p>
+
+            <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák <i class="fa fa-external-link"></i></a></p>
+            <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők <i class="fa fa-external-link"></i></a></p>
       </section>
     </main>
     <footer>
