--- a/szerverekesfelho.html
+++ b/szerverekesfelho.html
@@ -33,7 +33,7 @@
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
-            <li><a href="#">Szerverek és felhőszolgáltatások</a></li>
+            <li><a href="#" id="aktiv">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
             <li></li>
           </ul>
@@ -55,6 +55,8 @@
           <li><a href="ptt/sef5.html">Felhőszolgáltatások (9+62 óra)</a></li>
           <li><a href="ptt/sef6.html">Alkalmazások üzemeltetése (4+31 óra)</a></li>
         </ol>
+
+        <h1>Anyagok</h1>
 
         <p><a href="hor/hor.html">Hálózati operációs rendszerek</a></p>
         <p><a href="hor/windowsserver2008.html">Windows Server 2008</a></p>
