--- a/vizsgak.html
+++ b/vizsgak.html
@@ -29,7 +29,7 @@
             <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="office.html">Irodai szoftverek</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
-            <li><a href="#">Vizsgák (informatika)</a></li>
+            <li><a href="#" id="aktiv">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
