--- a/vizsgakhalo.html
+++ b/vizsgakhalo.html
@@ -34,7 +34,7 @@
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
-            <li><a href="#">Vizsgák (hálózatok)</a></li>
+            <li><a href="#" id="aktiv">Vizsgák (hálózatok)</a></li>
             <li></li>
           </ul>
         </nav>
