--- a/office.html
+++ b/office.html
@@ -27,7 +27,7 @@
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
-            <li><a href="#.html">Irodai szoftverek</a></li>
+            <li><a href="#.html" id="aktiv">Irodai szoftverek</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
