--- a/szerverekesfelho.html
+++ b/szerverekesfelho.html
@@ -44,16 +44,16 @@
 
         <h3>Szerverek és felhőszolgáltatások (12)</h3>
         <ol>
-          <li><a href="ptt/sef1.html">Virtualizáció és konténerek (8+54 óra)</a></li>
-          <li><a href="ptt/sef2.html">Windows szerver telepítése és üzemeltetése (8+54 óra)</a></li>
+          <li><a href="ptthalo/sef1.html">Virtualizáció és konténerek (8+54 óra)</a></li>
+          <li><a href="ptthalo/sef2.html">Windows szerver telepítése és üzemeltetése (8+54 óra)</a></li>
         </ol>
     
         <h3>Szerverek és felhőszolgáltatások (13)</h3>
         <ol>
-          <li><a href="ptt/sef3.html">Linux szerver telepítése és üzemeltetése (9+62 óra)</a></li>
-          <li><a href="ptt/sef4.html">Linux és Windows rendszerek integrációja (9+62 óra)</a></li>
-          <li><a href="ptt/sef5.html">Felhőszolgáltatások (9+62 óra)</a></li>
-          <li><a href="ptt/sef6.html">Alkalmazások üzemeltetése (4+31 óra)</a></li>
+          <li><a href="ptthalo/sef3.html">Linux szerver telepítése és üzemeltetése (9+62 óra)</a></li>
+          <li><a href="ptthalo/sef4.html">Linux és Windows rendszerek integrációja (9+62 óra)</a></li>
+          <li><a href="ptthalo/sef5.html">Felhőszolgáltatások (9+62 óra)</a></li>
+          <li><a href="ptthalo/sef6.html">Alkalmazások üzemeltetése (4+31 óra)</a></li>
         </ol>
 
         <h1>Anyagok</h1>
