--- a/elm.html
+++ b/elm.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -22,7 +24,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="elm.html">Elmélet</a></li>
+            <li><a href="#" id="aktiv">Elmélet</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="office.html">Irodai szoftverek</a></li>
@@ -41,25 +43,38 @@
         </nav>
       </aside>
       <section>
-        <h1>Elmélet 10 leckében</h1>
-        <ol>
-          <li><a href="hardver/infelm.html">Információelmélet & kódelmélet</a></li>
-          <li><a href="hardver/binary.html">Számrendszerek</a></li>
-          <li><a href="hardver/nummat.html">Numerikus matematika 1.</a></li>
-          <li><a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></li>
-          <li><a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a></li>
-          <li><a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a></li>
-          <li><a href="kozpontiegyseg/cpu.html">CPU</a></li>
-          <li><a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></li>
-        </ol>
-    
-        <h1>Anyagok</h1>
+        <h1>Elmélet</h1>
         <p><a href="okt/okt.html">Oktatási anyagok</a></p>
-        <p><a href="okt/szamtechtortenet.html">A számítástechnika története</a></p>
+
+        <h3>Elméleti alapok</h3>
+        <p><a href="hardver/infelm.html">Információelmélet & kódelmélet</a></p>
+        <p><a href="hardver/binary.html">Számrendszerek</a></p>
+        <p><a href="hardver/nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></p>
         <p><a href="hardver/r.html">Numerikus programozás</a></p>
+
+        <h3>Történeti áttekintés</h3>
+        <p><a href="okt/szamtechtortenet.html">A számítástechnika története</a></p>
+        <p>Mechanikus számítógépek (Charles Babbage, Analytical Engine, Difference Engine)</p>
+        <p>Analóg számítógép (Vannevar Bush, Difference Analyzer, Memex)</p>
+        <p>Elektromechanikus számítógépek (Konrad Zuse, Z; Howard Aiken, MARK)</p>
+        <p>I. generáció (1943-1958): Elektronikus számítógépek, elektroncsövekből (ABC, ENIAC, EDVAC)</p>
+        <p>II. generáció (1958-1965): Elektronikus számítógépek, tranzisztorokból</p>
+        <p>III. generáció (1965-1972): Jack Kilby, integrált áramkör</p>
+        <p>IV. generáció (1972-1990): univerzális chip, Intel 4004</p>
+
+        <h3>Elektronika</h3>
+        <p><a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></p>
+        <p><a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a></p>
+        <p><a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a></p>
+        <p><a href="kozpontiegyseg/cpu.html">CPU</a></p>
         <p><a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a></p>
         <p><a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a></p>
         <p><a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a></p>
+
+        <h3>Belső memória és tárolt program</h3>
+        <p>Jaquard lyukkártyája</p>
+        <p>Ada Lovelace programja</p>
+        <p><a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></p>
       </section>
     </main>
     <footer>
