--- a/okostelefon.html
+++ b/okostelefon.html
@@ -30,7 +30,7 @@
             <hr>
             <li><a href="elektr.html">Elektronika</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
-            <li><a href="okostelefon.html">Okoseszközök</a></li>
+            <li><a href="#" id="aktiv">Okoseszközök</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
