--- a/ai.html
+++ b/ai.html
@@ -29,7 +29,7 @@
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="elektr.html">Elektronika</a></li>
-            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="#" id="aktiv">Mesterséges intelligencia</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
