--- a/elektr.html
+++ b/elektr.html
@@ -28,7 +28,7 @@
             <li><a href="office.html">Irodai szoftverek</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
-            <li><a href="elektr.html">Elektronika</a></li>
+            <li><a href="#" id="aktiv">Elektronika</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
             <hr>
