--- a/office.html
+++ b/office.html
@@ -25,7 +25,7 @@
             <li><a href="elm.html">Elmélet</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
-            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="#" id="aktiv">Irodai szoftverek</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="elektr.html">Elektronika</a></li>
