--- a/opr.html
+++ b/opr.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="elm.html">Elmélet</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
-            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="#" id="aktiv">Operációs rendszerek</a></li>
             <li><a href="office.html">Irodai szoftverek</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
