--- a/vizsgak.html
+++ b/vizsgak.html
@@ -26,7 +26,7 @@
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="office.html">Irodai szoftverek</a></li>
-            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+            <li><a href="#" id="aktiv">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="elektr.html">Elektronika</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
