--- a/elm.html
+++ b/elm.html
@@ -24,7 +24,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="#" id="aktiv">Elmélet</a></li>
+            <li><a href="#" id="aktiv">Számítógép-architektúrák</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="office.html">Irodai szoftverek</a></li>
@@ -43,16 +43,23 @@
         </nav>
       </aside>
       <section>
-        <h1>Elmélet</h1>
+        <p>Tartalom</p>
+        <ul id="t">
+          <li><a href="#al">Elméleti alapok</a></li>
+          <li><a href="#tort">Történeti áttekintés</a></li>
+          <li><a href="#el">Elektronika</a></li>
+          <li><a href="#mem">Belső memória és tárolt program</a></li>
+        </ul>
+
         <p><a href="okt/okt.html">Oktatási anyagok</a></p>
 
-        <h3>Elméleti alapok</h3>
+        <h3 id="al">Elméleti alapok</h3>
         <p><a href="hardver/infelm.html">Információelmélet & kódelmélet</a></p>
         <p><a href="hardver/binary.html">Számrendszerek</a></p>
         <p><a href="hardver/nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></p>
         <p><a href="hardver/r.html">Numerikus programozás</a></p>
 
-        <h3>Történeti áttekintés</h3>
+        <h3 id="tort">Történeti áttekintés</h3>
         <p><a href="okt/szamtechtortenet.html">A számítástechnika története</a></p>
         <p>Mechanikus számítógépek (Charles Babbage, Analytical Engine, Difference Engine)</p>
         <p>Analóg számítógép (Vannevar Bush, Difference Analyzer, Memex)</p>
@@ -62,7 +69,7 @@
         <p>III. generáció (1965-1972): Jack Kilby, integrált áramkör</p>
         <p>IV. generáció (1972-1990): univerzális chip, Intel 4004</p>
 
-        <h3>Elektronika</h3>
+        <h3 id="el">Elektronika</h3>
         <p><a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></p>
         <p><a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a></p>
         <p><a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a></p>
@@ -71,7 +78,7 @@
         <p><a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a></p>
         <p><a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a></p>
 
-        <h3>Belső memória és tárolt program</h3>
+        <h3 id="mem">Belső memória és tárolt program</h3>
         <p>Jaquard lyukkártyája</p>
         <p>Ada Lovelace programja</p>
         <p><a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></p>
