--- a/office.html
+++ b/office.html
@@ -24,7 +24,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="elm.html">Elmélet</a></li>
+            <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="#" id="aktiv">Irodai szoftverek</a></li>
