--- a/elm.html
+++ b/elm.html
@@ -43,6 +43,7 @@
         </nav>
       </aside>
       <section>
+        <h1>A számítógép-tudomány alapjai</h1>
         <p>Tartalom</p>
         <ul id="t">
           <li><a href="#al">Elméleti alapok</a></li>
