--- a/kozpontiegyseg/cpu.html
+++ b/kozpontiegyseg/cpu.html
@@ -27,6 +27,34 @@
       <section>
         <h1>CPU</h1>
 
+        <h3>Utasításkészlet</h3>
+        <ul>
+          <li>LOAD a number from RAM into the CPU (egy szám betöltése a memóriából a processzorba)</li>
+          <li>ADD two numbers together (két szám összeadása)</li>
+          <li>STORE a number from the CPU back out to RAM (a processzorból a memóriába tárol el egy számot)</li>
+          <li>COMPARE one number with another (összehasonlít két számot)</li>
+          <li>JUMP IF Condition to another address in RAM (adott memóriacímre ugrik, ha egy feltétel teljesül)</li>
+          <li>JUMP to another address in RAM (adott memóriacímre ugrik)</li>
+          <li>OUTput to a device such as a monitor (adat kivitele egy erre szolgáló perifériára, például monitorra)</li>
+          <li>INput from a device such as a keyboard (adat bevitele egy erre szolgáló perifériáról, például billentyűzetről)</li>
+        </ul>
+
+        <h3>Kétféle utasításkészlet</h3>
+        <ul>
+          <li>RISC: Reduced Instruction Set Computer - egyszerűsített utasításkészletű számítógép</li>
+          <li>CISC: Complete Instruction Set Computer - teljes utasításkészletű számítógép</li>
+        </ul>
+
+        <h3>Tulajdonságok</h3>
+        <ul>
+          <li>Órajel</li>
+          <li>Hány bites</li>
+          <li>Magok száma</li>
+          <li>Busz</li>
+          <li>Cache</li>
+        </ul>
+
+        <h1>Anyagok</h1>
         <p><a href="https://drive.google.com/file/d/1tqNQqWFlM9rEJeIGG5DVoil2xFKb7wL_/view?usp=sharing" target=_blank>Nagy László: Mikroprocesszor architektúrák</a></p>
         <p><a href="https://drive.google.com/file/d/1vALLuErQ6HOdVWzpWgt_gaWZHUgNplUe/view?usp=sharing" target=_blank>Máté István Zsolt: A processzor és csatlakoztatása</a></p>
         <p><a href="https://drive.google.com/file/d/1atdArevH58pmxnf-QtEu_LRrFytyu5h2/view?usp=sharing" target=_blank>Nagy László: A mikroprocesszorok, be- és kiszerelésük, karbantartási feladatok</a></p>
@@ -62,10 +90,6 @@
         <p>Hangkártya</p>
         <p>Videókártya</p>
         <p>Hálózati kártya</p>
-    
-        <h3>Tulajdonságok</h3>
-        <p>Órajel</p>
-        <p>Hány bites</p>
       </section>
     </main>
     <footer>
