--- a/elm.html
+++ b/elm.html
@@ -50,6 +50,7 @@
           <li><a href="#tort">Történeti áttekintés</a></li>
           <li><a href="#el">Elektronika</a></li>
           <li><a href="#mem">Belső memória és tárolt program</a></li>
+          <li><a href="#egz">Egzotikumok</a></li>
         </ul>
 
         <p><a href="okt/okt.html">Oktatási anyagok</a></p>
@@ -66,6 +67,7 @@
         <p>Analóg számítógép (Vannevar Bush, Difference Analyzer, Memex)</p>
         <p>Elektromechanikus számítógépek (Konrad Zuse, Z; Howard Aiken, MARK)</p>
         <p>I. generáció (1943-1958): Elektronikus számítógépek, elektroncsövekből (ABC, ENIAC, EDVAC)</p>
+        <p><a href="https://sg.hu/cikkek/43187/az_eniac_szuletesene" target="_blank">Az ENIAC születésének igaz története</a></p>
         <p>II. generáció (1958-1965): Elektronikus számítógépek, tranzisztorokból</p>
         <p>III. generáció (1965-1972): Jack Kilby, integrált áramkör</p>
         <p>IV. generáció (1972-1990): univerzális chip, Intel 4004</p>
@@ -83,6 +85,10 @@
         <p>Jaquard lyukkártyája</p>
         <p>Ada Lovelace programja</p>
         <p><a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></p>
+
+        <h3 id="egz">Egzotikumok</h3>
+        <p>Szuperszámítógép, Seymour Cray</p>
+        <p>Kvantumszámítógép</p>
       </section>
     </main>
     <footer>
