--- a/kozpontiegyseg/cpu.html
+++ b/kozpontiegyseg/cpu.html
@@ -27,7 +27,7 @@
       <section>
         <h1>CPU</h1>
 
-        <h3>Utasításkészlet</h3>
+        <h3><a href="http://hu.wikipedia.org/wiki/Utasításkészlet" target="_blank">Utasításkészlet</a></h3>
         <ul>
           <li>LOAD a number from RAM into the CPU (egy szám betöltése a memóriából a processzorba)</li>
           <li>ADD two numbers together (két szám összeadása)</li>
