--- a/ai.html
+++ b/ai.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
-    <title>Informatikai biztonság</title>
+    <title>Mesterséges intelligencia</title>
     <link rel="stylesheet" href="static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Informatikai biztonság</h1>
+      <h1>Mesterséges intelligencia</h1>
     </header>
 
     <main>
@@ -31,23 +31,32 @@
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
-            <li><a href="#" class="aktiv">Informatikai biztonság</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
             <hr>
             <li><a href="elektr.html">Elektronika</a></li>
             <li><a href="robotika.html">Robotika</a></li>
             <li><a href="dron.html">Drónok</a></li>
-            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="#" class="aktiv">Mesterséges intelligencia</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <h1>Informatikai biztonság</h1>
-        <p><a href="biztonsag/bizt.html">Hálózati biztonság</a></p>
-        <p><a href="biztonsag/alkbizt.html">Alkalmazások biztonsága</a></p>
-        <p><a href="biztonsag/kript.html">Kriptográfia</a></p>
+        <h1>Programtanterv</h1>
+        <p><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></p>
+
+        <h1>Mesterséges intelligencia 7 leckében</h1>
+        <ol>
+          <li><a href="#">Statisztikai alapok</a></li>
+          <li><a href="mestint/ai.html">Mesterséges intelligencia</a></li>
+          <li><a href="mestint/ml.html">Gépi tanulás</a></li>
+          <li><a href="mestint/nn.html">Neuronhálózatok</a></li>
+          <li><a href="mestint/pyai.html">Python nyelven</a></li>
+          <li><a href="#">Szöveg generálása, ChatGPT</a></li>
+          <li><a href="#">Kép generálása, Tengr.ai</a></li>
+        </ol>
       </section>
     </main>
     <footer>
