--- a/office.html
+++ b/office.html
@@ -34,7 +34,12 @@
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
-            <li></li>
+            <hr>
+            <li><a href="elektr.html">Elektronika</a></li>
+            <li><a href="robotika.html">Robotika</a></li>
+            <li><a href="dron.html">Drónok</a></li>
+            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="okostelefon.html">Okoseszközök</a></li>
           </ul>
         </nav>
       </aside>
