--- a/okostelefon.html
+++ b/okostelefon.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
-    <title>Informatikai biztonság</title>
+    <title>Okoseszközök</title>
     <link rel="stylesheet" href="static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Informatikai biztonság</h1>
+      <h1>Okoseszközök</h1>
     </header>
 
     <main>
@@ -31,7 +31,7 @@
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
-            <li><a href="#" class="aktiv">Informatikai biztonság</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
             <hr>
@@ -39,15 +39,27 @@
             <li><a href="robotika.html">Robotika</a></li>
             <li><a href="dron.html">Drónok</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
-            <li><a href="okostelefon.html">Okoseszközök</a></li>
+            <li><a href="#" id="aktiv">Okoseszközök</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <h1>Informatikai biztonság</h1>
-        <p><a href="biztonsag/bizt.html">Hálózati biztonság</a></p>
-        <p><a href="biztonsag/alkbizt.html">Alkalmazások biztonsága</a></p>
-        <p><a href="biztonsag/kript.html">Kriptográfia</a></p>
+        <p>Tartalom</p>
+        <ul id="t">
+          <li><a href="#okost">Okostelefonok</a></li>
+          <li><a href="#okosora">Okosóra</a></li>
+          <li><a href="#okoso">Okosotthon</a></li>
+        </ul>
+
+
+        <h1 id="okost">Okostelefonok</h1>
+
+        <h3>Branch Education - Exploring Smartphones</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=6fKKFeJEGExBl0Ga&amp;list=PL6rx9p3tbsMtRbJzFLswzvyl6OzHe32TC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+        <h1 id="okosora">Okosóra</h1>
+
+        <h1 id="okoso">Okosotthon</h1>
       </section>
     </main>
     <footer>
