--- a/biztonsag.html
+++ b/biztonsag.html
@@ -31,7 +31,7 @@
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
-            <li><a href="#" class="aktiv">Informatikai biztonság</a></li>
+            <li><a href="#" id="aktiv">Informatikai biztonság</a></li>
             <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
             <hr>
