--- a/ai.html
+++ b/ai.html
@@ -38,7 +38,7 @@
             <li><a href="elektr.html">Elektronika</a></li>
             <li><a href="robotika.html">Robotika</a></li>
             <li><a href="dron.html">Drónok</a></li>
-            <li><a href="#" class="aktiv">Mesterséges intelligencia</a></li>
+            <li><a href="#" id="aktiv">Mesterséges intelligencia</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
           </ul>
         </nav>
