--- a/office.html
+++ b/office.html
@@ -26,13 +26,17 @@
           <ul>
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
-            <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="#" id="aktiv">Irodai szoftverek</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
+            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
+            <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
+            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
-            <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
             <hr>
             <li><a href="elektr.html">Elektronika</a></li>
