--- a/szerverekesfelho.html
+++ b/szerverekesfelho.html
@@ -26,13 +26,17 @@
           <ul>
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
-            <li><a href="opr.html">Operációs rendszerek</a></li>
             <li><a href="office.html">Irodai szoftverek</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
+            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
+            <li><a href="#" id="aktiv">Hálózati operációs rendszerek</a></li>
+            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
-            <li><a href="#" id="aktiv">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
             <hr>
             <li><a href="elektr.html">Elektronika</a></li>
@@ -46,18 +50,9 @@
       <section>
         <h1>Programtanterv</h1>
 
-        <h3>Szerverek és felhőszolgáltatások (12)</h3>
         <ol>
-          <li><a href="ptthalo/sef1.html">Virtualizáció és konténerek (8+54 óra)</a></li>
           <li><a href="ptthalo/sef2.html">Windows szerver telepítése és üzemeltetése (8+54 óra)</a></li>
-        </ol>
-    
-        <h3>Szerverek és felhőszolgáltatások (13)</h3>
-        <ol>
           <li><a href="ptthalo/sef3.html">Linux szerver telepítése és üzemeltetése (9+62 óra)</a></li>
-          <li><a href="ptthalo/sef4.html">Linux és Windows rendszerek integrációja (9+62 óra)</a></li>
-          <li><a href="ptthalo/sef5.html">Felhőszolgáltatások (9+62 óra)</a></li>
-          <li><a href="ptthalo/sef6.html">Alkalmazások üzemeltetése (4+31 óra)</a></li>
         </ol>
 
         <h1>Anyagok</h1>
@@ -67,8 +62,6 @@
         <p><a href="hor/windowsserver2012.html">Windows Server 2012</a></p>
         <p><a href="hor/windowsserver2016.html">Windows Server 2016</a></p>
         <p><a href="hor/ubuntuserver.html">Linux szerver</a></p>
-        <p><a href="hor/integr.html">Windows és Linux integrációja</a></p>
-        <p><a href="hor/felho.html">Felhőszolgáltatások</a></p>
       </section>
     </main>
     <footer>
