--- a/alkuz.html
+++ b/alkuz.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
-    <title>Windows és Linux integrációja</title>
-    <link rel="stylesheet" href="../static/main.css">
+    <title>Alkalmazások üzemeltetése</title>
+    <link rel="stylesheet" href="static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,15 +16,44 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Windows és Linux integrációja</h1>
+      <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
+      <h1>Alkalmazások üzemeltetése</h1>
     </header>
 
     <main>
       <aside>
-        <a href="../szerverekesfelho.html">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="elm.html">Számítógép-architektúrák</a></li>
+            <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+            <hr>
+            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
+            <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
+            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="#" id="aktiv">Alkalmazások üzemeltetése</a></li>
+            <hr>
+            <li><a href="halozatok.html">Hálózati ismeretek</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <hr>
+            <li><a href="elektr.html">Elektronika</a></li>
+            <li><a href="robotika.html">Robotika</a></li>
+            <li><a href="dron.html">Drónok</a></li>
+            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="okostelefon.html">Okoseszközök</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <h1>Programtanterv</h1>
+        <ol>
+          <li><a href="ptthalo/sef4.html">Linux és Windows rendszerek integrációja (9+62 óra)</a></li>
+          <li><a href="ptthalo/sef6.html">Alkalmazások üzemeltetése (4+31 óra)</a></li>
+        </ol>
+
         <h1>Windows és Linux integrációja</h1>
 
         <h3>Samba</h3>
@@ -66,7 +95,7 @@
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="../static/cc.logo.large.png" alt="cc">
+      <img src="static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
