--- a/felho.html
+++ b/felho.html
@@ -22,9 +22,37 @@
 
     <main>
       <aside>
-        <a href="../szerverekesfelho.html">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="elm.html">Számítógép-architektúrák</a></li>
+            <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+            <hr>
+            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
+            <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
+            <li><a href="#" id="aktiv">Felhőszolgáltatások</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <hr>
+            <li><a href="halozatok.html">Hálózati ismeretek</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <hr>
+            <li><a href="elektr.html">Elektronika</a></li>
+            <li><a href="robotika.html">Robotika</a></li>
+            <li><a href="dron.html">Drónok</a></li>
+            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="okostelefon.html">Okoseszközök</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
+        <h1>Programtanterv</h1>
+        <ol>
+          <li><a href="ptthalo/sef5.html">Felhőszolgáltatások (9+62 óra)</a></li>
+        </ol>
+
         <h1>Felhőszolgáltatások</h1>
 
         <h3>Felhő számítástechnika</h3>
