--- a/virtkont.html
+++ b/virtkont.html
@@ -49,9 +49,8 @@
       </aside>
       <section>
         <h1>Programtanterv</h1>
-        <ol>
-          <li><a href="ptthalo/sef1.html">Virtualizáció és konténerek (8+54 óra)</a></li>
-        </ol>
+        <p><a href="ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></p>
+        <p><a href="ptthalo/sef1.html">Virtualizáció és konténerek (8+54 óra)</a></p>
 
         <h1>Anyagok</h1>
 
