--- a/biztonsag.html
+++ b/biztonsag.html
@@ -49,6 +49,7 @@
       </aside>
       <section>
         <h1>Informatikai biztonság</h1>
+        <p><a href="biztonsag/pchiba.html">Számítógépes hibaelhárítás</a></p>
         <p><a href="biztonsag/bizt.html">Hálózati biztonság</a></p>
         <p><a href="biztonsag/alkbizt.html">Alkalmazások biztonsága</a></p>
         <p><a href="biztonsag/kript.html">Kriptográfia</a></p>
