--- a/biztonsag.html
+++ b/biztonsag.html
@@ -34,6 +34,7 @@
             <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
             <li><a href="felho.html">Felhőszolgáltatások</a></li>
             <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <li><a href="alkbizt.html">Alkalmazások biztonsága</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="#" id="aktiv">Informatikai biztonság</a></li>
@@ -51,7 +52,6 @@
         <h1>Informatikai biztonság</h1>
         <p><a href="biztonsag/pchiba.html">Számítógépes hibaelhárítás</a></p>
         <p><a href="biztonsag/bizt.html">Hálózati biztonság</a></p>
-        <p><a href="biztonsag/alkbizt.html">Alkalmazások biztonsága</a></p>
         <p><a href="biztonsag/kript.html">Kriptográfia</a></p>
       </section>
     </main>
