--- a/alkbizt.html
+++ b/alkbizt.html
@@ -22,7 +22,31 @@
 
     <main>
       <aside>
-        <a href="../biztonsag.html">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="elm.html">Számítógép-architektúrák</a></li>
+            <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+            <hr>
+            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
+            <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
+            <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <li><a href="#" id="aktiv">Alkalmazások biztonsága</a></li>
+            <hr>
+            <li><a href="halozatok.html">Hálózati ismeretek</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <hr>
+            <li><a href="elektr.html">Elektronika</a></li>
+            <li><a href="robotika.html">Robotika</a></li>
+            <li><a href="dron.html">Drónok</a></li>
+            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="okostelefon.html">Okoseszközök</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Alkalmazások biztonsága</h1>
