--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
             <li><a href="felho.html">Felhőszolgáltatások</a></li>
             <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <li><a href="alkbizt.html">Alkalmazások biztonsága</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="biztonsag.html">Informatikai biztonság</a></li>
