--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="italapok.html">Számítógép</a></li>
+            <li><a href="italapok/elm.html">Számítógép</a></li>
             <li><a href="rendszer/os.html">Operációs rendszerek</a></li>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
             <li><a href="elektronika/elektr.html">Elektronika</a></li>
