--- a/index.html
+++ b/index.html
@@ -22,18 +22,16 @@
 
     <main>
       <aside>
-        <nav>
-          <ul>
-            <li><a href="italapok/elm.html">Számítógép</a></li>
-            <li><a href="rendszer/os.html">Operációs rendszerek</a></li>
-            <li><a href="halozatok.html">Hálózati ismeretek</a></li>
-            <li><a href="elektronika/elektr.html">Elektronika</a></li>
-          </ul>
-        </nav>
+
       </aside>
 
       <section>
-        <h1>Bemutatkozás</h1>
+        <article id="bemutat">
+          <p class="italapok"><a href="italapok/elm.html">Számítógép</a></p>
+          <p class="os"><a href="rendszer/os.html">Operációs rendszerek</a></p>
+          <p class="network"><a href="halozatok.html">Hálózati ismeretek</a></p>
+          <p class="ai"><a href="elektronika/elektr.html">Elektronika</a></p>
+        </article>
       </section>
     </main>
     <footer>
