--- a/halozatok/PT.html
+++ b/halozatok/PT.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header>
+    <header class="network">
       <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
       <h1>Packet Tracer</h1>
     </header>
