--- a/italapok/office.html
+++ b/italapok/office.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header>
+    <header class="italapok">
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
       <h1>Irodai szoftverek</h1>
     </header>
