--- a/halozatok.html
+++ b/halozatok.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header class="network">
+    <header>
       <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Hálózati ismeretek</h1>
+      <h1 class="network">Hálózati ismeretek</h1>
     </header>
 
     <main>
