--- a/italapok/elm.html
+++ b/italapok/elm.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header class="italapok">
+    <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Számítógép-architektúrák</h1>
+      <h1 class="italapok">Számítógép-architektúrák</h1>
     </header>
 
     <main>
@@ -42,16 +42,16 @@
           <li><a href="#egz">Egzotikumok</a></li>
         </ul>
 
-        <p><a href="okt/okt.html">Oktatási anyagok</a></p>
+        <p><a href="../okt/okt.html">Oktatási anyagok</a></p>
 
         <h3 id="al">Elméleti alapok</h3>
-        <p><a href="hardver/infelm.html">Információelmélet & kódelmélet</a></p>
-        <p><a href="hardver/binary.html">Számrendszerek</a></p>
-        <p><a href="hardver/nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></p>
-        <p><a href="hardver/r.html">Numerikus programozás</a></p>
+        <p><a href="../hardver/infelm.html">Információelmélet & kódelmélet</a></p>
+        <p><a href="../hardver/binary.html">Számrendszerek</a></p>
+        <p><a href="../hardver/nummat.html">Numerikus matematika 1. (számábrázolás, hibabecslés)</a></p>
+        <p><a href="../hardver/r.html">Numerikus programozás</a></p>
 
         <h3 id="tort">Történeti áttekintés</h3>
-        <p><a href="okt/szamtechtortenet.html">A számítástechnika története</a></p>
+        <p><a href="../okt/szamtechtortenet.html">A számítástechnika története</a></p>
         <p>Mechanikus számítógépek (Charles Babbage, Analytical Engine, Difference Engine)</p>
         <p>Analóg számítógép (Vannevar Bush, Difference Analyzer, Memex)</p>
         <p>Elektromechanikus számítógépek (Konrad Zuse, Z; Howard Aiken, MARK)</p>
@@ -62,10 +62,10 @@
         <p>IV. generáció (1972-1990): univerzális chip, Intel 4004</p>
 
         <h3 id="el">Elektronika</h3>
-        <p><a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></p>
-        <p><a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a></p>
-        <p><a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a></p>
-        <p><a href="kozpontiegyseg/cpu.html">CPU</a></p>
+        <p><a href="../kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></p>
+        <p><a href="../kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a></p>
+        <p><a href="../kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a></p>
+        <p><a href="../kozpontiegyseg/cpu.html">CPU</a></p>
         <p><a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a></p>
         <p><a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a></p>
         <p><a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a></p>
@@ -73,7 +73,7 @@
         <h3 id="mem">Belső memória és tárolt program</h3>
         <p>Jaquard lyukkártyája</p>
         <p>Ada Lovelace programja</p>
-        <p><a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></p>
+        <p><a href="../kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></p>
 
         <h3 id="egz">Egzotikumok</h3>
         <p>Szuperszámítógép, Seymour Cray</p>
