--- a/rendszer/linux.html
+++ b/rendszer/linux.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header class="os">
+    <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Linux</h1>
+      <h1 class="os">Linux</h1>
     </header>
 
     <main>
