--- a/office/kiadvany.html
+++ b/office/kiadvany.html
@@ -22,7 +22,16 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <nav>
+          <ul>
+            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="tablazat.html">Táblázatkezelés</a></li>
+            <li><a href="szoveg.html">Szövegszerkesztés</a></li>
+            <li><a href="prezi.html">Prezentációkészítés</a></li>
+            <li><a href="#" id="aktiv">Kiadványszerkesztés</a></li>
+            <li><a href="texlatex.html">TeX / LaTeX</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Kiadványszerkesztés</h1>
