--- a/office/office.html
+++ b/office/office.html
@@ -24,10 +24,12 @@
       <aside>
         <nav>
           <ul>
-            <li><a href="elm.html">Számítógép-architektúrák</a></li>
-            <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="#" id="aktiv">Irodai szoftverek</a></li>
-            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+            <li><a href="tablazat.html">Táblázatkezelés</a></li>
+            <li><a href="szoveg.html">Szövegszerkesztés</a></li>
+            <li><a href="prezi.html">Prezentációkészítés</a></li>
+            <li><a href="kiadvany.html">Kiadványszerkesztés</a></li>
+            <li><a href="texlatex.html">TeX / LaTeX</a></li>
           </ul>
         </nav>
       </aside>
@@ -37,12 +39,28 @@
         <p><a href="../office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
         <p><a href="../office/kttint.html">Irodai szoftverek integrált használata</a></p>
 
-        <h1>Anyagok</h1>
-        <p><a href="../office/tablazat.html">Táblázatkezelés</a></p>
-        <p><a href="../office/szoveg.html">Szövegszerkesztés</a></p>
-        <p><a href="../office/prezi.html">Prezentációkészítés</a></p>
-        <p><a href="../office/kiadvany.html">Kiadványszerkesztés</a></p>
-        <p><a href="../office/texlatex.html">TeX / LaTeX</a></p>
+        <h1>ECDL vizsgafeladatok</h1>
+        <p><a href="https://njszt.hu/hu/icdl/modul/szovegszerkesztes" target="_blank">ECDL Szövegszerkesztés modul</a></p>
+        <p><a href="https://njszt.hu/hu/icdl/modul/tablazatkezeles" target="_blank">ECDL Táblázatkezelés modul</a></p>
+        <p><a href="https://njszt.hu/hu/icdl/modul/prezentacio" target="_blank">ECDL Prezentációkészítés modul</a></p>
+
+        <h1 id="erettsegi">Érettségi vizsga (digitális kultúra)</h1>
+
+        <h3>Szövegszerkesztés (közép / emelt)</h3>
+        <p><a href="#">Feladat</a></p>
+
+        <h3>Táblázatkezelés (közép / emelt)</h3>
+        <p><a href="#">Feladat</a></p>
+
+        <h3>Prezentációkészítés (közép / emelt)</h3>
+        <p><a href="#">Feladat</a></p>
+
+        <h1>Irodai informatikus</h1>
+        <h3>Irodai szoftverek</h3>
+        <p><a href="#">2020. februári feladatlap</a></p>
+        <p><a href="#">2021. februári feladatlap</a></p>
+        <p><a href="#">2022. februári feladatlap</a></p>
+        <p><a href="#">2023. februári feladatlap</a></p>
       </section>
     </main>
     <footer>
