--- a/rendszuzem.html
+++ b/rendszuzem.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header id="fofejlec">
-      <a href="#"><img src="static/Palkotikumlogo2.png" alt="p"></a>
+    <header>
+      <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
       <h1>Számítógépes rendszerek</h1>
     </header>
 
@@ -24,16 +24,8 @@
       <aside>
 
       </aside>
-
       <section>
-        <article id="bemutat">
-          <p class="italapok"><a href="italapok/elm.html">Számítógép</a></p>
-          <p class="os"><a href="rendszer/os.html">Operációs rendszerek</a></p>
-          <p class="network"><a href="halozatok.html">Hálózati ismeretek</a></p>
-          <p class="rendszuzem"><a href="rendszuzem.html">Rendszerüzemeltetés</a></p>
-          <p class="ai"><a href="elektronika/elektr.html">Elektronika</a></p>
-          <p class="office"><a href="office/office.html">Irodai szoftverek</a></p>
-        </article>
+        
       </section>
     </main>
     <footer>
