--- a/rendszuzem.html
+++ b/rendszuzem.html
@@ -22,7 +22,14 @@
 
     <main>
       <aside>
-
+        <nav>
+          <ul>
+            <li><a href="halozatok/szerverekesfelho.html">Hálózati operációs rendszerek</a></li>
+            <li><a href="halozatok/alkuz.html">Alkalmazások üzemeltetése</a></li>
+            <li><a href="halozatok/felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="halozatok/alkbizt.html">Alkalmazások biztonsága</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         
