--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p class="italapok"><a href="italapok/elm.html">Számítógép</a></p>
           <p class="os"><a href="rendszer/os.html">Operációs rendszerek</a></p>
           <p class="network"><a href="halozatok.html">Hálózati ismeretek</a></p>
-          <p class="rendszuzem"><a href="rendszuzem.html">Rendszerüzemeltetés</a></p>
+          <p class="rendszuzem"><a href="halozatok/szerverekesfelho.html">Rendszerüzemeltetés</a></p>
           <p class="ai"><a href="elektronika/elektr.html">Elektronika</a></p>
           <p class="office"><a href="office/office.html">Irodai szoftverek</a></p>
         </article>
